--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- Font Awesome 5.2.0 -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
+    <!-- Bootstrap 4.1.3 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>This is my portfolio</h1>
-    <p>I am a great person</p>
+    <div class="container jumbotron">
+        <h1 class="display-1">Random Cards</h1>
+        <p class="lead">
+            Welcome to Our Gallery
+        </p>
+    </div>
+    <div class="container">
+
+        <div class="card float-left">
+            <img class="card-img-top" class="card-img-top" src="images/camel.png" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Camel</h5>
+                <p class="card-text">His modeling carrer went down hill in the 70s</p>
+                <a href="#" class="btn btn-primary">Quit Today</a>
+            </div>
+        </div>
+
+        <div class="card float-left">
+            <img class="card-img-top" src="images/cat.jpeg" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Cat</h5>
+                <p class="card-text">A Cat with photoshop eyes</p>
+                <a href="#" class="btn btn-primary">Learn photoshop</a>
+            </div>
+        </div>
+
+        <div class="card float-left">
+            <img class="card-img-top" src="images/dog.jpg" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Puppy</h5>
+                <p class="card-text">Un perrito lindo que aun no se ha entranado a buscar el baño</p>
+                <a href="#" class="btn btn-primary">Donate</a>
+            </div>
+        </div>
+        <div class="card float-left icon-card">
+                <i class="card-icon fas fa-plus"></i>
+        </div>
+
+
 </body>
+<script src="script.js"></script>
+
 </html>
